language/move-lang/tests/move_check/typing/module_call_explicit_type_arguments.exp
error[E06001]: unused value without 'drop'
  ┌─ tests/move_check/typing/module_call_explicit_type_arguments.move:2:33
  │  
2 │       fun foo<T, U>(_x: T, _y: U) {
  │               -     --  - The type 'T' does not have the ability 'drop'
  │               │     │    
  │               │     The parameter '_x' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
  │               To satisfy the constraint, the 'drop' ability would need to be added here
  │ ╭─────────────────────────────────^
3 │ │     }
  │ ╰─────^ Invalid return

error[E06001]: unused value without 'drop'
  ┌─ tests/move_check/typing/module_call_explicit_type_arguments.move:2:33
  │  
2 │       fun foo<T, U>(_x: T, _y: U) {
  │                  -         --  - The type 'U' does not have the ability 'drop'
  │                  │         │    
  │                  │         The parameter '_y' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
  │                  To satisfy the constraint, the 'drop' ability would need to be added here
  │ ╭─────────────────────────────────^
3 │ │     }
  │ ╰─────^ Invalid return

